--- a/Makefile.toml
+++ b/Makefile.toml
@@ -140,11 +140,8 @@ description = "Run cspell for spell checking."                                  
 script = "cspell --quiet  --no-progress --no-summary  --dot --gitignore -e \"{.git/**,.github/**,.vscode/**,.azurepipelines/**,dxe_readiness_validator/src/tests/data/*.json}\" ."
 
 [tasks.deny]
-description = "Run cargo deny."
-install_crate = false
-clear = true
-command = "cargo"
-args = ["deny", "check"]
+description = "Run cargo deny (disabled)."
+disabled = true
 
 [tasks.all]
 description = "Run all tasks for PR readiness."
